--- a/COVID_19_Detection - Inception-3C.ipynb
+++ b/COVID_19_Detection - Inception-3C.ipynb
@@ -14,9 +14,9 @@
     "from os import getcwd\n",
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from tensorflow.keras.optimizers import RMSprop, Adam\n",
-    "from tensorflow.keras.callbacks import Callback, ReduceLROnPlateau\n",
-    "from tensorflow.keras.metrics import TruePositives, TrueNegatives, FalsePositives, FalseNegatives"
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "from tensorflow.keras.callbacks import Callback\n",
+    "from tensorflow.keras.metrics import Precision, Recall"
    ]
   },
   {
@@ -38,30 +38,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = 'C:/Users/devbh/COVID19 datasets - Limited/Training'\n",
-    "validation_dir = 'C:/Users/devbh/COVID19 datasets - Limited/Testing'\n",
+    "train_dir = 'C:/Users/devbh/COVID19 datasets - Limited (3 classes)/Training'\n",
+    "validation_dir = 'C:/Users/devbh/COVID19 datasets - Limited (3 classes)/Testing'\n",
     "\n",
-    "train_bacterial_dir = train_dir+'/BACTERIAL'+'/train/'\n",
+    "train_pneu_dir = train_dir+'/PNEUMONIA'+'/train/'\n",
     "train_covid_dir = train_dir+'/COVID19'+'/train/'\n",
     "train_normal_dir = train_dir+'/NORMAL'+'/train/'\n",
-    "train_viral_dir = train_dir+'/VIRAL'+'/train/'\n",
     "\n",
-    "validation_bacterial_dir = validation_dir+'/BACTERIAL'+'/test/'\n",
+    "validation_pneu_dir = validation_dir+'/PNEUMONIA'+'/test/'\n",
     "validation_covid_dir = validation_dir+'/COVID19'+'/test/'\n",
-    "validation_normal_dir = validation_dir+'/NORMAL'+'/test/'\n",
-    "validation_viral_dir = validation_dir+'/VIRAL'+'/test/'"
+    "validation_normal_dir = validation_dir+'/NORMAL'+'/test/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "507e6881",
+   "id": "cf52b1de",
    "metadata": {},
    "outputs": [],
    "source": [
     "class myCallback(Callback):\n",
     "    def on_epoch_end(self, epoch, logs={}):\n",
-    "        if(logs.get('val_accuracy')>0.85):\n",
+    "        if(logs.get('val_accuracy')>=0.96):\n",
     "            print(\"\\nReached limit accuracy so cancelling training!\")\n",
     "            self.model.stop_training = True"
    ]
@@ -69,36 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cb07a78d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.ReduceLROnPlateau at 0x1c9b57bc8b0>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ReduceLROnPlateau(\n",
-    "    monitor=\"val_loss\",\n",
-    "    factor=0.5,\n",
-    "    patience=5,\n",
-    "    verbose=0,\n",
-    "    mode=\"auto\",\n",
-    "    min_delta=0.0001,\n",
-    "    cooldown=0,\n",
-    "    min_lr=0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "9641660d",
    "metadata": {},
    "outputs": [
@@ -106,24 +74,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1000 images belonging to 4 classes.\n",
-      "Found 200 images belonging to 4 classes.\n"
+      "Found 750 images belonging to 3 classes.\n",
+      "Found 150 images belonging to 3 classes.\n"
      ]
     }
    ],
    "source": [
+    "batch = 12\n",
+    "\n",
     "train_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(train_dir,\n",
-    "                                                   batch_size = 16,\n",
+    "                                                   batch_size = batch,\n",
     "                                                   class_mode = 'categorical',\n",
     "                                                   target_size = (224, 224),\n",
     "                                                   shuffle = True)     \n",
     "\n",
     "validation_generator =  test_datagen.flow_from_directory(validation_dir,\n",
-    "                                                        batch_size = 16,\n",
+    "                                                        batch_size = batch,\n",
     "                                                        class_mode = 'categorical',\n",
     "                                                        target_size = (224, 224),\n",
     "                                                        shuffle = True)"
@@ -131,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "64f47efe",
    "metadata": {},
    "outputs": [
@@ -990,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "bac17617",
    "metadata": {},
    "outputs": [
@@ -1010,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f9ef8aa3",
    "metadata": {
     "scrolled": true
@@ -1634,11 +1604,11 @@
       "                                                                                                  \n",
       " dropout (Dropout)              (None, 64)           0           ['dense[0][0]']                  \n",
       "                                                                                                  \n",
-      " dense_1 (Dense)                (None, 4)            260         ['dropout[0][0]']                \n",
+      " dense_1 (Dense)                (None, 3)            195         ['dropout[0][0]']                \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
-      "Total params: 9,417,956\n",
-      "Trainable params: 442,692\n",
+      "Total params: 9,417,891\n",
+      "Trainable params: 442,627\n",
       "Non-trainable params: 8,975,264\n"
      ]
     },
@@ -1655,11 +1625,11 @@
     "x = Flatten()(x)\n",
     "x = Dense(64, activation = 'relu')(x)\n",
     "x = Dropout(0.5)(x)                  \n",
-    "x = Dense(4, activation = 'softmax')(x)           \n",
+    "x = Dense(3, activation = 'softmax')(x)           \n",
     "\n",
     "model = Model(pre_trained_model.input, x) \n",
     "\n",
-    "model.compile(optimizer = Adam(learning_rate = 0.001), \n",
+    "model.compile(optimizer = 'adam', \n",
     "              loss = 'categorical_crossentropy', \n",
     "              metrics = ['accuracy'])\n",
     "\n",
@@ -1668,10 +1638,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ba241f41",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1679,40 +1649,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/30\n",
-      "63/63 [==============================] - 204s 3s/step - loss: 0.8643 - accuracy: 0.6240 - val_loss: 0.6983 - val_accuracy: 0.7600 - lr: 0.0010\n",
+      "63/63 [==============================] - 24s 342ms/step - loss: 0.5190 - accuracy: 0.7773 - val_loss: 0.2007 - val_accuracy: 0.9333\n",
       "Epoch 2/30\n",
-      "63/63 [==============================] - 151s 2s/step - loss: 0.5590 - accuracy: 0.7700 - val_loss: 0.5758 - val_accuracy: 0.7900 - lr: 0.0010\n",
+      "63/63 [==============================] - 21s 334ms/step - loss: 0.2115 - accuracy: 0.9347 - val_loss: 0.1503 - val_accuracy: 0.9600\n",
       "Epoch 3/30\n",
-      "63/63 [==============================] - 151s 2s/step - loss: 0.4301 - accuracy: 0.8260 - val_loss: 0.6079 - val_accuracy: 0.7750 - lr: 0.0010\n",
+      "63/63 [==============================] - 24s 375ms/step - loss: 0.1627 - accuracy: 0.9533 - val_loss: 0.1055 - val_accuracy: 0.9600\n",
       "Epoch 4/30\n",
-      "63/63 [==============================] - 155s 2s/step - loss: 0.3824 - accuracy: 0.8630 - val_loss: 0.5327 - val_accuracy: 0.8150 - lr: 0.0010\n",
-      "Epoch 5/30\n",
-      "63/63 [==============================] - 191s 3s/step - loss: 0.3538 - accuracy: 0.8660 - val_loss: 0.6095 - val_accuracy: 0.7900 - lr: 0.0010\n",
-      "Epoch 6/30\n",
-      "63/63 [==============================] - 148s 2s/step - loss: 0.2985 - accuracy: 0.8870 - val_loss: 0.4561 - val_accuracy: 0.8050 - lr: 0.0010\n",
-      "Epoch 7/30\n",
-      "63/63 [==============================] - 131s 2s/step - loss: 0.2655 - accuracy: 0.9000 - val_loss: 0.4347 - val_accuracy: 0.8150 - lr: 0.0010\n",
-      "Epoch 8/30\n",
-      "63/63 [==============================] - ETA: 0s - loss: 0.2469 - accuracy: 0.8990\n",
+      "63/63 [==============================] - ETA: 0s - loss: 0.1183 - accuracy: 0.9627\n",
       "Reached limit accuracy so cancelling training!\n",
-      "63/63 [==============================] - 118s 2s/step - loss: 0.2469 - accuracy: 0.8990 - val_loss: 0.4493 - val_accuracy: 0.8500 - lr: 0.0010\n"
+      "63/63 [==============================] - 26s 409ms/step - loss: 0.1183 - accuracy: 0.9627 - val_loss: 0.0861 - val_accuracy: 0.9667\n"
      ]
     }
    ],
    "source": [
     "callbacks = myCallback()\n",
-    "reduce_lr = ReduceLROnPlateau()\n",
     "history = model.fit(train_generator,\n",
     "                    validation_data = validation_generator,\n",
     "                    verbose = 1,\n",
     "                    epochs = 30,\n",
-    "                    batch_size = 16,\n",
-    "                    callbacks = [callbacks, reduce_lr])"
+    "                    batch_size = batch,\n",
+    "                    callbacks = [callbacks])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5e033e90",
    "metadata": {},
    "outputs": [
@@ -1720,8 +1681,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13/13 [==============================] - 20s 2s/step - loss: 0.4493 - accuracy: 0.8500\n",
-      "test loss, test acc: [0.44927743077278137, 0.8500000238418579]\n"
+      "13/13 [==============================] - 6s 435ms/step - loss: 0.0861 - accuracy: 0.9667\n",
+      "test loss, test acc: [0.08605974912643433, 0.9666666388511658]\n"
      ]
     }
    ],
@@ -1748,50 +1709,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "402fedb9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "311"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(pre_trained_model.layers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "eadc9a1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "234"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(model.layers)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6468443",
+   "id": "53eef96e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b65f9a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f053977",
    "metadata": {},
    "outputs": [],
    "source": []
