--- a/COVID_19_Detection-VGG19-3C.ipynb
+++ b/COVID_19_Detection-VGG19-3C.ipynb
@@ -25,47 +25,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = 'C:/Users/devbh/COVID19 datasets - Limited/Training'\n",
-    "validation_dir = 'C:/Users/devbh/COVID19 datasets - Limited/Testing'\n",
+    "train_dir = 'C:/Users/devbh/COVID19 datasets - Limited (3 classes)/Training'\n",
+    "validation_dir = 'C:/Users/devbh/COVID19 datasets - Limited (3 classes)/Testing'\n",
     "\n",
-    "train_bacterial_dir = train_dir+'/BACTERIAL'+'/train/'\n",
+    "train_pneu_dir = train_dir+'/PNEUMONIA'+'/train/'\n",
     "train_covid_dir = train_dir+'/COVID19'+'/train/'\n",
     "train_normal_dir = train_dir+'/NORMAL'+'/train/'\n",
-    "train_viral_dir = train_dir+'/VIRAL'+'/train/'\n",
     "\n",
-    "validation_bacterial_dir = validation_dir+'/BACTERIAL'+'/test/'\n",
+    "validation_pneu_dir = validation_dir+'/PNEUMONIA'+'/test/'\n",
     "validation_covid_dir = validation_dir+'/COVID19'+'/test/'\n",
-    "validation_normal_dir = validation_dir+'/NORMAL'+'/test/'\n",
-    "validation_viral_dir = validation_dir+'/VIRAL'+'/test/'"
+    "validation_normal_dir = validation_dir+'/NORMAL'+'/test/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2dbb5718",
+   "id": "7a6fa06b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:/Users/devbh/COVID19 datasets - Limited (3 classes)/Training/COVID19/train/'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_covid_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "aa0e975d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class myCallback(Callback):\n",
     "    def on_epoch_end(self, epoch, logs={}):\n",
-    "        if(logs.get('val_accuracy')>0.98):\n",
+    "        if(logs.get('val_accuracy')>0.95):\n",
     "            print(\"\\nReached limit accuracy so cancelling training!\")\n",
     "            self.model.stop_training = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "488c1d72",
+   "execution_count": 5,
+   "id": "9d2f0e09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.ReduceLROnPlateau at 0x20e7a918100>"
+       "<keras.callbacks.ReduceLROnPlateau at 0x25d5f182b50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,27 +104,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7a6fa06b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:/Users/devbh/COVID19 datasets - Limited/Training/COVID19/train/'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_covid_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "b2a3ca8b",
    "metadata": {},
@@ -114,24 +112,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1000 images belonging to 4 classes.\n",
-      "Found 200 images belonging to 4 classes.\n"
+      "Found 750 images belonging to 3 classes.\n",
+      "Found 150 images belonging to 3 classes.\n"
      ]
     }
    ],
    "source": [
+    "batch = 12\n",
+    "\n",
     "train_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(train_dir,\n",
-    "                                                   batch_size = 16,\n",
+    "                                                   batch_size = batch,\n",
     "                                                   class_mode = 'categorical',\n",
     "                                                   target_size = (224, 224),\n",
     "                                                   shuffle = True)     \n",
     "\n",
     "validation_generator =  test_datagen.flow_from_directory(validation_dir,\n",
-    "                                                        batch_size = 16,\n",
+    "                                                        batch_size = batch,\n",
     "                                                        class_mode = 'categorical',\n",
     "                                                        target_size = (224, 224),\n",
     "                                                        shuffle = True)"
@@ -224,8 +224,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for layer in pre_trained_model.layers:\n",
-    "    layer.trainable = False"
+    "for layer in pre_trained_model.layers[:-3]:\n",
+    "    layer.trainable = False\n",
+    "for layer in pre_trained_model.layers[-3:]:\n",
+    "    layer.trainable = True "
    ]
   },
   {
@@ -257,14 +259,71 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Adam' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m x \u001b[38;5;241m=\u001b[39m Dense(\u001b[38;5;241m4\u001b[39m, activation \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msoftmax\u001b[39m\u001b[38;5;124m'\u001b[39m)(x)           \n\u001b[0;32m      7\u001b[0m model \u001b[38;5;241m=\u001b[39m Model(pre_trained_model\u001b[38;5;241m.\u001b[39minput, x) \n\u001b[1;32m----> 9\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer \u001b[38;5;241m=\u001b[39m \u001b[43mAdam\u001b[49m(learning_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.001\u001b[39m), \n\u001b[0;32m     10\u001b[0m               loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategorical_crossentropy\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[0;32m     11\u001b[0m               metrics \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     13\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Adam' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 224, 224, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 112, 112, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 112, 112, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 112, 112, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 56, 56, 128)       0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 56, 56, 256)       295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv4 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 28, 28, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 28, 28, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv4 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 14, 14, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv4 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " average_pooling2d (AverageP  (None, 3, 3, 512)        0         \n",
+      " ooling2D)                                                       \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 4608)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                294976    \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 3)                 195       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 20,319,555\n",
+      "Trainable params: 5,014,787\n",
+      "Non-trainable params: 15,304,768\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
@@ -273,11 +332,11 @@
     "x = Flatten()(x)\n",
     "x = Dense(64, activation = 'relu')(x)\n",
     "x = Dropout(0.5)(x)                  \n",
-    "x = Dense(4, activation = 'softmax')(x)           \n",
+    "x = Dense(3, activation = 'softmax')(x)           \n",
     "\n",
     "model = Model(pre_trained_model.input, x) \n",
     "\n",
-    "model.compile(optimizer = Adam(learning_rate = 0.001), \n",
+    "model.compile(optimizer = RMSprop(learning_rate = 0.001), \n",
     "              loss = 'categorical_crossentropy', \n",
     "              metrics = ['accuracy'])\n",
     "\n",
@@ -286,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ba241f41",
    "metadata": {
     "scrolled": false
@@ -296,36 +355,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/15\n",
-      "63/63 [==============================] - 188s 3s/step - loss: 1.1029 - accuracy: 0.5290\n",
-      "Epoch 2/15\n",
-      "63/63 [==============================] - 183s 3s/step - loss: 0.7308 - accuracy: 0.7030\n",
-      "Epoch 3/15\n",
-      "63/63 [==============================] - 183s 3s/step - loss: 0.6427 - accuracy: 0.7230\n",
-      "Epoch 4/15\n",
-      "63/63 [==============================] - 194s 3s/step - loss: 0.5812 - accuracy: 0.7430\n",
-      "Epoch 5/15\n",
-      "63/63 [==============================] - 313s 5s/step - loss: 0.5704 - accuracy: 0.7360\n",
-      "Epoch 6/15\n",
-      "63/63 [==============================] - 314s 5s/step - loss: 0.5236 - accuracy: 0.7640\n",
-      "Epoch 7/15\n",
-      "63/63 [==============================] - 316s 5s/step - loss: 0.5165 - accuracy: 0.7490\n",
-      "Epoch 8/15\n",
-      "63/63 [==============================] - 317s 5s/step - loss: 0.4763 - accuracy: 0.7720\n",
-      "Epoch 9/15\n",
-      "63/63 [==============================] - 204s 3s/step - loss: 0.4568 - accuracy: 0.7820\n",
-      "Epoch 10/15\n",
-      "63/63 [==============================] - 326s 5s/step - loss: 0.4507 - accuracy: 0.7780\n",
-      "Epoch 11/15\n",
-      "63/63 [==============================] - 343s 5s/step - loss: 0.4684 - accuracy: 0.7790\n",
-      "Epoch 12/15\n",
-      "63/63 [==============================] - 342s 5s/step - loss: 0.4090 - accuracy: 0.8090\n",
-      "Epoch 13/15\n",
-      "63/63 [==============================] - 340s 5s/step - loss: 0.4184 - accuracy: 0.8100\n",
-      "Epoch 14/15\n",
-      "63/63 [==============================] - 340s 5s/step - loss: 0.4277 - accuracy: 0.7930\n",
-      "Epoch 15/15\n",
-      "63/63 [==============================] - 344s 5s/step - loss: 0.4098 - accuracy: 0.7940\n"
+      "Epoch 1/40\n",
+      "63/63 [==============================] - 254s 4s/step - loss: 1.0914 - accuracy: 0.6613 - val_loss: 0.4028 - val_accuracy: 0.8200 - lr: 0.0010\n",
+      "Epoch 2/40\n",
+      "63/63 [==============================] - 305s 5s/step - loss: 0.3432 - accuracy: 0.8840 - val_loss: 0.2478 - val_accuracy: 0.9200 - lr: 0.0010\n",
+      "Epoch 3/40\n",
+      "63/63 [==============================] - 246s 4s/step - loss: 0.2527 - accuracy: 0.9200 - val_loss: 0.1700 - val_accuracy: 0.9400 - lr: 0.0010\n",
+      "Epoch 4/40\n",
+      "63/63 [==============================] - 266s 4s/step - loss: 0.1672 - accuracy: 0.9520 - val_loss: 0.1473 - val_accuracy: 0.9467 - lr: 0.0010\n",
+      "Epoch 5/40\n",
+      "63/63 [==============================] - 306s 5s/step - loss: 0.1374 - accuracy: 0.9613 - val_loss: 0.2917 - val_accuracy: 0.8933 - lr: 0.0010\n",
+      "Epoch 6/40\n",
+      "63/63 [==============================] - ETA: 0s - loss: 0.1337 - accuracy: 0.9627\n",
+      "Reached limit accuracy so cancelling training!\n",
+      "63/63 [==============================] - 355s 6s/step - loss: 0.1337 - accuracy: 0.9627 - val_loss: 0.1661 - val_accuracy: 0.9600 - lr: 0.0010\n"
      ]
     }
    ],
@@ -335,14 +378,14 @@
     "history = model.fit(train_generator,\n",
     "                    validation_data = validation_generator,\n",
     "                    verbose = 1,\n",
-    "                    epochs = 30,\n",
-    "                    batch_size = 16,\n",
+    "                    epochs = 40,\n",
+    "                    batch_size = batch,\n",
     "                    callbacks = [callbacks, reduce_lr])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "5e033e90",
    "metadata": {},
    "outputs": [
@@ -350,13 +393,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13/13 [==============================] - 70s 5s/step - loss: 0.5521 - accuracy: 0.8300\n",
-      "test loss, test acc: [0.5520595908164978, 0.8299999833106995]\n"
+      "13/13 [==============================] - 65s 5s/step - loss: 0.1661 - accuracy: 0.9600\n",
+      "test loss, test acc: [0.16613057255744934, 0.9599999785423279]\n"
      ]
     }
    ],
    "source": [
-    "results = model.evaluate(validation_generator, batch_size=128)\n",
+    "results = model.evaluate(validation_generator, batch_size=12)\n",
     "print(\"test loss, test acc:\", results)"
    ]
   },
@@ -370,8 +413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ffd80fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "402fedb9",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +431,7 @@
        "22"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402fedb9",
+   "id": "e238a40a",
    "metadata": {},
    "outputs": [],
    "source": []
