--- a/COVID_19_Detection-MobileNetV2-3C.ipynb
+++ b/COVID_19_Detection-MobileNetV2-3C.ipynb
@@ -14,7 +14,7 @@
     "from os import getcwd\n",
     "import numpy as np\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from tensorflow.keras.optimizers import RMSprop, Adam\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.callbacks import Callback, ReduceLROnPlateau"
    ]
   },
@@ -25,30 +25,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = 'C:/Users/devbh/COVID19 datasets - Limited/Training'\n",
-    "validation_dir = 'C:/Users/devbh/COVID19 datasets - Limited/Testing'\n",
+    "train_dir = 'C:/Users/Asus/COVID19 datasets - Limited (3 classes)/Training'\n",
+    "validation_dir = 'C:/Users/Asus/COVID19 datasets - Limited (3 classes)/Testing'\n",
     "\n",
-    "train_bacterial_dir = train_dir+'/BACTERIAL'+'/train/'\n",
+    "train_pneu_dir = train_dir+'/PNEUMONIA'+'/train/'\n",
     "train_covid_dir = train_dir+'/COVID19'+'/train/'\n",
     "train_normal_dir = train_dir+'/NORMAL'+'/train/'\n",
-    "train_viral_dir = train_dir+'/VIRAL'+'/train/'\n",
     "\n",
-    "validation_bacterial_dir = validation_dir+'/BACTERIAL'+'/test/'\n",
+    "validation_pneu_dir = validation_dir+'/PNEUMONIA'+'/test/'\n",
     "validation_covid_dir = validation_dir+'/COVID19'+'/test/'\n",
-    "validation_normal_dir = validation_dir+'/NORMAL'+'/test/'\n",
-    "validation_viral_dir = validation_dir+'/VIRAL'+'/test/'"
+    "validation_normal_dir = validation_dir+'/NORMAL'+'/test/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7934b3e",
+   "id": "7a6fa06b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class myCallback(Callback):\n",
     "    def on_epoch_end(self, epoch, logs={}):\n",
-    "        if(logs.get('val_accuracy')>0.82):\n",
+    "        if(logs.get('val_accuracy')>=0.96):\n",
     "            print(\"\\nReached limit accuracy so cancelling training!\")\n",
     "            self.model.stop_training = True"
    ]
@@ -56,13 +54,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3205f650",
+   "id": "13b98f7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.ReduceLROnPlateau at 0x1accff54d30>"
+       "<keras.callbacks.ReduceLROnPlateau at 0x1af5b302e50>"
       ]
      },
      "execution_count": 4,
@@ -86,27 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7a6fa06b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:/Users/devbh/COVID19 datasets - Limited/Training/COVID19/train/'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_covid_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "b2a3ca8b",
    "metadata": {},
    "outputs": [
@@ -114,24 +91,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 1000 images belonging to 4 classes.\n",
-      "Found 200 images belonging to 4 classes.\n"
+      "Found 750 images belonging to 3 classes.\n",
+      "Found 150 images belonging to 3 classes.\n"
      ]
     }
    ],
    "source": [
+    "batch = 12\n",
+    "\n",
     "train_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "test_datagen = ImageDataGenerator(rescale = 1./255)\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(train_dir,\n",
-    "                                                   batch_size = 16,\n",
+    "                                                   batch_size = batch,\n",
     "                                                   class_mode = 'categorical',\n",
     "                                                   target_size = (224, 224),\n",
     "                                                   shuffle = True)     \n",
     "\n",
     "validation_generator =  test_datagen.flow_from_directory(validation_dir,\n",
-    "                                                        batch_size = 16,\n",
+    "                                                        batch_size = batch,\n",
     "                                                        class_mode = 'categorical',\n",
     "                                                        target_size = (224, 224),\n",
     "                                                        shuffle = True)"
@@ -139,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d0a562d9",
    "metadata": {
     "scrolled": true
@@ -594,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "114a94cb",
    "metadata": {},
    "outputs": [],
@@ -605,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bac17617",
    "metadata": {},
    "outputs": [
@@ -625,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f9ef8aa3",
    "metadata": {
     "scrolled": true
@@ -1017,11 +996,11 @@
       "                                                                                                  \n",
       " dropout (Dropout)              (None, 64)           0           ['dense[0][0]']                  \n",
       "                                                                                                  \n",
-      " dense_1 (Dense)                (None, 4)            260         ['dropout[0][0]']                \n",
+      " dense_1 (Dense)                (None, 3)            195         ['dropout[0][0]']                \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
-      "Total params: 1,051,268\n",
-      "Trainable params: 10,564\n",
+      "Total params: 1,051,203\n",
+      "Trainable params: 10,499\n",
       "Non-trainable params: 1,040,704\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -1032,7 +1011,7 @@
     "x = Flatten()(x)\n",
     "x = Dense(64, activation = 'relu')(x)\n",
     "x = Dropout(0.5)(x)                  \n",
-    "x = Dense(4, activation = 'softmax')(x)           \n",
+    "x = Dense(3, activation = 'softmax')(x)           \n",
     "\n",
     "model = Model(pre_trained_model.input, x) \n",
     "\n",
@@ -1045,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ba241f41",
    "metadata": {
     "scrolled": false
@@ -1055,66 +1034,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/30\n",
-      "63/63 [==============================] - 34s 406ms/step - loss: 1.2932 - accuracy: 0.5040 - val_loss: 0.8085 - val_accuracy: 0.6700 - lr: 0.0010\n",
-      "Epoch 2/30\n",
-      "63/63 [==============================] - 23s 363ms/step - loss: 0.7503 - accuracy: 0.7050 - val_loss: 0.7725 - val_accuracy: 0.7100 - lr: 0.0010\n",
-      "Epoch 3/30\n",
-      "63/63 [==============================] - 34s 546ms/step - loss: 0.6045 - accuracy: 0.7620 - val_loss: 0.7170 - val_accuracy: 0.7350 - lr: 0.0010\n",
-      "Epoch 4/30\n",
-      "63/63 [==============================] - 35s 557ms/step - loss: 0.5614 - accuracy: 0.7930 - val_loss: 0.7681 - val_accuracy: 0.7250 - lr: 0.0010\n",
-      "Epoch 5/30\n",
-      "63/63 [==============================] - 44s 694ms/step - loss: 0.4921 - accuracy: 0.8200 - val_loss: 0.6605 - val_accuracy: 0.7550 - lr: 0.0010\n",
-      "Epoch 6/30\n",
-      "63/63 [==============================] - 44s 691ms/step - loss: 0.4773 - accuracy: 0.8210 - val_loss: 0.5871 - val_accuracy: 0.8050 - lr: 0.0010\n",
-      "Epoch 7/30\n",
-      "63/63 [==============================] - 45s 708ms/step - loss: 0.4338 - accuracy: 0.8370 - val_loss: 0.6591 - val_accuracy: 0.7800 - lr: 0.0010\n",
-      "Epoch 8/30\n",
-      "63/63 [==============================] - 52s 827ms/step - loss: 0.4229 - accuracy: 0.8300 - val_loss: 0.6293 - val_accuracy: 0.7850 - lr: 0.0010\n",
-      "Epoch 9/30\n",
-      "63/63 [==============================] - 50s 790ms/step - loss: 0.3904 - accuracy: 0.8470 - val_loss: 0.5892 - val_accuracy: 0.7900 - lr: 0.0010\n",
-      "Epoch 10/30\n",
-      "63/63 [==============================] - 51s 801ms/step - loss: 0.3792 - accuracy: 0.8460 - val_loss: 0.6790 - val_accuracy: 0.7700 - lr: 0.0010\n",
-      "Epoch 11/30\n",
-      "63/63 [==============================] - 46s 727ms/step - loss: 0.3630 - accuracy: 0.8630 - val_loss: 0.6357 - val_accuracy: 0.7950 - lr: 0.0010\n",
-      "Epoch 12/30\n",
-      "63/63 [==============================] - 47s 736ms/step - loss: 0.3625 - accuracy: 0.8650 - val_loss: 0.5965 - val_accuracy: 0.8050 - lr: 0.0010\n",
-      "Epoch 13/30\n",
-      "63/63 [==============================] - 49s 770ms/step - loss: 0.3471 - accuracy: 0.8670 - val_loss: 0.5720 - val_accuracy: 0.7850 - lr: 0.0010\n",
-      "Epoch 14/30\n",
-      "63/63 [==============================] - 44s 699ms/step - loss: 0.3317 - accuracy: 0.8640 - val_loss: 0.5542 - val_accuracy: 0.8050 - lr: 0.0010\n",
-      "Epoch 15/30\n",
-      "63/63 [==============================] - 44s 694ms/step - loss: 0.3093 - accuracy: 0.8820 - val_loss: 0.6385 - val_accuracy: 0.7800 - lr: 0.0010\n",
-      "Epoch 16/30\n",
-      "63/63 [==============================] - 45s 716ms/step - loss: 0.3397 - accuracy: 0.8760 - val_loss: 0.6730 - val_accuracy: 0.7750 - lr: 0.0010\n",
-      "Epoch 17/30\n",
-      "63/63 [==============================] - 81s 1s/step - loss: 0.3075 - accuracy: 0.8740 - val_loss: 0.5736 - val_accuracy: 0.8150 - lr: 0.0010\n",
-      "Epoch 18/30\n",
-      "63/63 [==============================] - 157s 2s/step - loss: 0.3010 - accuracy: 0.8760 - val_loss: 0.6224 - val_accuracy: 0.7800 - lr: 0.0010\n",
-      "Epoch 19/30\n",
-      "63/63 [==============================] - 167s 3s/step - loss: 0.2784 - accuracy: 0.8860 - val_loss: 0.6216 - val_accuracy: 0.7900 - lr: 0.0010\n",
-      "Epoch 20/30\n",
-      "63/63 [==============================] - 156s 3s/step - loss: 0.2662 - accuracy: 0.8820 - val_loss: 0.5512 - val_accuracy: 0.8000 - lr: 0.0010\n",
-      "Epoch 21/30\n",
-      "63/63 [==============================] - 193s 3s/step - loss: 0.2784 - accuracy: 0.8880 - val_loss: 0.6061 - val_accuracy: 0.8100 - lr: 0.0010\n",
-      "Epoch 22/30\n",
-      "63/63 [==============================] - 162s 3s/step - loss: 0.2674 - accuracy: 0.8950 - val_loss: 0.5589 - val_accuracy: 0.8100 - lr: 0.0010\n",
-      "Epoch 23/30\n",
-      "63/63 [==============================] - 153s 2s/step - loss: 0.2667 - accuracy: 0.8940 - val_loss: 0.6699 - val_accuracy: 0.7950 - lr: 0.0010\n",
-      "Epoch 24/30\n",
-      "63/63 [==============================] - 165s 3s/step - loss: 0.2484 - accuracy: 0.8990 - val_loss: 0.4992 - val_accuracy: 0.8200 - lr: 0.0010\n",
-      "Epoch 25/30\n",
-      "63/63 [==============================] - 152s 2s/step - loss: 0.2485 - accuracy: 0.9000 - val_loss: 0.6419 - val_accuracy: 0.7950 - lr: 0.0010\n",
-      "Epoch 26/30\n",
-      "63/63 [==============================] - 57s 896ms/step - loss: 0.2587 - accuracy: 0.8930 - val_loss: 0.6250 - val_accuracy: 0.7950 - lr: 0.0010\n",
-      "Epoch 27/30\n",
-      "63/63 [==============================] - 147s 2s/step - loss: 0.2387 - accuracy: 0.9140 - val_loss: 0.6751 - val_accuracy: 0.7900 - lr: 0.0010\n",
-      "Epoch 28/30\n",
-      "63/63 [==============================] - 168s 3s/step - loss: 0.2175 - accuracy: 0.9150 - val_loss: 0.7199 - val_accuracy: 0.7950 - lr: 0.0010\n",
-      "Epoch 29/30\n",
-      "63/63 [==============================] - ETA: 0s - loss: 0.2214 - accuracy: 0.9160\n",
+      "Epoch 1/40\n",
+      "63/63 [==============================] - 115s 2s/step - loss: 0.9395 - accuracy: 0.6467 - val_loss: 0.2689 - val_accuracy: 0.9333 - lr: 0.0010\n",
+      "Epoch 2/40\n",
+      "63/63 [==============================] - 92s 1s/step - loss: 0.3702 - accuracy: 0.8680 - val_loss: 0.1860 - val_accuracy: 0.9400 - lr: 0.0010\n",
+      "Epoch 3/40\n",
+      "63/63 [==============================] - 139s 2s/step - loss: 0.2626 - accuracy: 0.9027 - val_loss: 0.1552 - val_accuracy: 0.9400 - lr: 0.0010\n",
+      "Epoch 4/40\n",
+      "63/63 [==============================] - 167s 3s/step - loss: 0.2396 - accuracy: 0.9120 - val_loss: 0.1314 - val_accuracy: 0.9533 - lr: 0.0010\n",
+      "Epoch 5/40\n",
+      "63/63 [==============================] - 194s 3s/step - loss: 0.2292 - accuracy: 0.9200 - val_loss: 0.1173 - val_accuracy: 0.9533 - lr: 0.0010\n",
+      "Epoch 6/40\n",
+      "63/63 [==============================] - 205s 3s/step - loss: 0.1851 - accuracy: 0.9267 - val_loss: 0.1276 - val_accuracy: 0.9600 - lr: 0.0010\n",
+      "Epoch 7/40\n",
+      "63/63 [==============================] - 215s 3s/step - loss: 0.1557 - accuracy: 0.9520 - val_loss: 0.1115 - val_accuracy: 0.9600 - lr: 0.0010\n",
+      "Epoch 8/40\n",
+      "63/63 [==============================] - 204s 3s/step - loss: 0.1502 - accuracy: 0.9493 - val_loss: 0.0997 - val_accuracy: 0.9600 - lr: 0.0010\n",
+      "Epoch 9/40\n",
+      "63/63 [==============================] - 193s 3s/step - loss: 0.1175 - accuracy: 0.9613 - val_loss: 0.0964 - val_accuracy: 0.9600 - lr: 0.0010\n",
+      "Epoch 10/40\n",
+      "63/63 [==============================] - 196s 3s/step - loss: 0.1019 - accuracy: 0.9667 - val_loss: 0.1108 - val_accuracy: 0.9600 - lr: 0.0010\n",
+      "Epoch 11/40\n",
+      "63/63 [==============================] - 151s 2s/step - loss: 0.1043 - accuracy: 0.9653 - val_loss: 0.1004 - val_accuracy: 0.9600 - lr: 0.0010\n",
+      "Epoch 12/40\n",
+      "63/63 [==============================] - ETA: 0s - loss: 0.1196 - accuracy: 0.9640\n",
       "Reached limit accuracy so cancelling training!\n",
-      "63/63 [==============================] - 155s 2s/step - loss: 0.2214 - accuracy: 0.9160 - val_loss: 0.5373 - val_accuracy: 0.8250 - lr: 0.0010\n"
+      "63/63 [==============================] - 116s 2s/step - loss: 0.1196 - accuracy: 0.9640 - val_loss: 0.0864 - val_accuracy: 0.9667 - lr: 0.0010\n"
      ]
     }
    ],
@@ -1124,14 +1069,14 @@
     "history = model.fit(train_generator,\n",
     "                    validation_data = validation_generator,\n",
     "                    verbose = 1,\n",
-    "                    epochs = 30,\n",
-    "                    batch_size = 16,\n",
+    "                    epochs = 40,\n",
+    "                    batch_size = batch,\n",
     "                    callbacks = [callbacks, reduce_lr])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5e033e90",
    "metadata": {},
    "outputs": [
@@ -1139,8 +1084,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13/13 [==============================] - 32s 2s/step - loss: 0.5373 - accuracy: 0.8250\n",
-      "test loss, test acc: [0.5372841358184814, 0.824999988079071]\n"
+      "13/13 [==============================] - 17s 1s/step - loss: 0.0864 - accuracy: 0.9667\n",
+      "test loss, test acc: [0.08638253062963486, 0.9666666388511658]\n"
      ]
     }
    ],
@@ -1167,50 +1112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "402fedb9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "154"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(pre_trained_model.layers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "78bbdfd7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "139"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(model.layers)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd889fe7",
+   "id": "f627a49d",
    "metadata": {},
    "outputs": [],
    "source": []
